--- a/1-Presentacion/BITSS-Intro-Slides.tex
+++ b/1-Presentacion/BITSS-Intro-Slides.tex
@@ -36,7 +36,7 @@
 }
 
 \title[Transparencia en Investigación en las Ciencias Sociales] % (optional, use only with long paper titles)
-{Nuevos desafíos para la investigación y las políticas públicas: reproducibilidad, transparencia y credibilidad}
+{Transparencia en Investigación en las Ciencias Sociales}
 
 \subtitle
 {}	
@@ -61,7 +61,7 @@ Fernando~Hoces de la Guardia\inst{1}}
 % - Keep it simple, no one is interested in your street address.
 
 \date[BITSS2017] % (optional, should be abbreviation of conference name)
-{Pontificia Universidad Católica, Octubre 2017\\
+{Universidad de La Salle, Octubre 2017\\
 Slides disponibles en \\ \url{https://goo.gl/wU81GA}}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
@@ -681,6 +681,11 @@ Amplio rango de que es lo que se debe escribir exactamente y cuanto detalle inco
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Replicaciones}
+
+% Add two more slides:
+% 1 - Distinguish between replication of the experiment, and computational rep. 
+% 2 - Mention Estimated rates of both in psy, med, econ, refer to Nicole Janz
+
 \begin{frame}{Replicaciones}
 \begin{enumerate}[<.->]
  \item El problema	\href{http://www.jstor.org/stable/1806061}{(JMCB Project)}
