--- a/1-Presentacion/BITSS-Intro-Slides.tex
+++ b/1-Presentacion/BITSS-Intro-Slides.tex
@@ -36,7 +36,9 @@
 }
 
 \title[Transparencia en Investigación en las Ciencias Sociales] % (optional, use only with long paper titles)
-{Transparencia en Investigación en las Ciencias Sociales}
+{Nuevos desafíos para la investigación y las políticas públicas: reproducibilidad, transparencia y credibilidad}
+
+%Nuevos desafíos para la investigación y las políticas públicas: reproducibilidad, transparencia y credibilidad
 
 \subtitle
 {}	
