update link for slides

--- a/1-Presentacion/BITSS-Intro-Slides.tex
+++ b/1-Presentacion/BITSS-Intro-Slides.tex
@@ -64,7 +64,7 @@ Fernando~Hoces de la Guardia\inst{1}}
 
 \date[BITSS2017] % (optional, should be abbreviation of conference name)
 {Universidad de La Salle, Octubre 2017\\
-Slides disponibles en \\ \url{https://goo.gl/wU81GA}}
+Slides disponibles en \\ \url{https://goo.gl/esbJE7}}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
