--- a/1-Presentacion/BITSS-Intro-Slides.tex
+++ b/1-Presentacion/BITSS-Intro-Slides.tex
@@ -101,6 +101,7 @@ Slides disponibles en \\ \url{https://goo.gl/esbJE7}}
 \beamerdefaultoverlayspecification{<.->}
 
 
+
 \begin{document}
 
 \begin{frame}
@@ -296,7 +297,7 @@ Por qué nos preocupamos:
 %     \end{frame}
 %}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Registros}
+\section{Sesgo de Publicación --- Registros}
 
 \subsection*{Sesgo de Publicación}
 \begin{frame}{Sesgo de Publicación}%{Subtitles are optional.}
@@ -487,7 +488,7 @@ Herramientas:
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Planes de Pre-Análisis}
+\section{P-Hacking --- Planes de Pre-Análisis}
 \subsection*{P-Hacking}
 \begin{frame}[<.->]{P-Hacking}
 Definición del problema:
@@ -682,12 +683,7 @@ Amplio rango de que es lo que se debe escribir exactamente y cuanto detalle inco
      \end{frame}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Replicaciones}
-
-% Add two more slides:
-% 1 - Distinguish between replication of the experiment, and computational rep. 
-% 2 - Mention Estimated rates of both in psy, med, econ, refer to Nicole Janz
-
+\section{Replicaciones Fallidas --- Pautas \& Protocolos}
 \begin{frame}{Replicaciones}
 \begin{enumerate}[<.->]
  \item El problema	\href{http://www.jstor.org/stable/1806061}{(JMCB Project)}
